// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Heading Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <h3
      class="sc-gXmSlM kKsxAv sc-cCsOjp kdvCNm"
    >
      Heading h3
    </h3>
  </div>
</div>
`;

exports[`Storyshots Core/Heading H 1 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <h1
      class="sc-gXmSlM kKsxAv sc-ciZhAO hkVzFW"
    >
      Heading h1
    </h1>
  </div>
</div>
`;

exports[`Storyshots Core/Heading H 2 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <h2
      class="sc-gXmSlM kKsxAv sc-jdAMXn CFtkS"
    >
      Heading h2
    </h2>
  </div>
</div>
`;

exports[`Storyshots Core/Heading H 3 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <h3
      class="sc-gXmSlM kKsxAv sc-bZnhIo htVspD"
    >
      Heading h3
    </h3>
  </div>
</div>
`;

exports[`Storyshots Core/Heading H 4 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <h4
      class="sc-gXmSlM ikNIBi sc-iTONeN gEEDeP"
    >
      Heading h4
    </h4>
  </div>
</div>
`;

exports[`Storyshots Core/Heading H 5 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <h5
      class="sc-gXmSlM ikNIBi sc-iAvgwm kUKanV"
    >
      Heading h5
    </h5>
  </div>
</div>
`;
